<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:rowCount="3"
    android:columnCount="3"
    >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_syllabus"
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:onClick="startSyllabusActivity"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/syllabus_description"
                    android:src="@drawable/ic_book" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/syllabus" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/notes_description"
                    android:src="@drawable/ic_file" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/notes" />

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/question_description"
                    android:src="@drawable/ic_question_paper" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/questions_papers" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/formulae_description"
                    android:src="@drawable/ic_formulae" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/formulae" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/syllabus_description"
                    android:src="@drawable/ic_book" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/msc_syllabus" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/syllabus_description"
                    android:src="@drawable/ic_book" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loksewa_syllabus" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/syllabus_description"
                    android:src="@drawable/ic_book" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/be_barch_booklet" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/syllabus_description"
                    android:src="@drawable/ic_book" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nec_license" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                app:cardCornerRadius="30dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/syllabus_description"
                    android:src="@drawable/baseline_video_library_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/videos" />
        </LinearLayout>





</GridLayout>